# lora-sensor

./: .gitignore  Makefile  README.md
atmega8/: Cargo.toml  GEMINI.md  Makefile  README.md  avr-atmega8.json  avr-gcc-wrapper.sh  flake.nix  memory.x
atmega8-c/: Makefile  aht25.c  aht25.h  blink.c  flake.nix  i2c.c  i2c.h  lora_tx.c
atmega8/.cargo/: config.toml
atmega8/src/: receiver.rs  transmitter.rs
cloudflare/: schema.sql  wrangler.toml
cloudflare/src/: index.ts
esp32/: Makefile  check_config.py  flake.nix  main.py  sniffer.py  update_config.py
rpi/: receiver.py
