[package]
name = "atmega8-lora-e220"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transmitter"
path = "src/transmitter.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[dependencies]
panic-halt = "0.2.0"
atmega-hal = { git = "https://github.com/rahix/avr-hal", features = ["atmega8", "rt"] }
embedded-hal = "0.2.7"
ufmt = "0.2.0"
nb = "1.0.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

[profile.dev]
panic = "abort"
